[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menus/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/Assets/MenuFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/MainMenu/SinglePlayerMenu/SinglePlayerMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/MainMenu/OptionsMenu/OptionsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menus/MainMenu/OnlineMenu/OnlineMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menus/MainMenu/ControlsMenu/ControlsMenu.tscn" type="PackedScene" id=6]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuFrame" type="ColorRect" parent="."]
anchor_left = -0.026
anchor_top = -0.049
anchor_right = 1.026
anchor_bottom = 1.049
margin_left = 64.0
margin_top = 64.288
margin_right = -63.2319
margin_bottom = -64.2881
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.141176, 0.141176, 0.141176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainFrame" type="ColorRect" parent="MenuFrame"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 703.0
margin_top = 64.0
margin_right = -728.232
margin_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.25098, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="GridContainer" parent="MenuFrame/MainFrame"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 11
size_flags_vertical = 3
custom_constants/vseparation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoloButton" type="Button" parent="MenuFrame/MainFrame/MainPanel"]
margin_right = 872.0
margin_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Single Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnlineButton" type="Button" parent="MenuFrame/MainFrame/MainPanel"]
margin_top = 126.0
margin_right = 872.0
margin_bottom = 220.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Online Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="Button" parent="MenuFrame/MainFrame/MainPanel"]
margin_top = 252.0
margin_right = 872.0
margin_bottom = 346.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="MenuFrame/MainFrame/MainPanel"]
margin_top = 378.0
margin_right = 872.0
margin_bottom = 472.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitPanel" type="GridContainer" parent="MenuFrame/MainFrame"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 1026.0
margin_right = -65.0
margin_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 7
size_flags_vertical = 14
custom_constants/vseparation = 23
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="MenuFrame/MainFrame/QuitPanel"]
margin_right = 871.0
margin_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 10
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SinglePlayerMenu" parent="MenuFrame" instance=ExtResource( 3 )]
visible = false

[node name="OnlineMenu" parent="MenuFrame" instance=ExtResource( 5 )]
visible = false

[node name="ControlsMenu" parent="MenuFrame" instance=ExtResource( 6 )]
visible = false
margin_right = 1.1377

[node name="OptionsMenu" parent="MenuFrame" instance=ExtResource( 4 )]

[connection signal="pressed" from="MenuFrame/MainFrame/MainPanel/SoloButton" to="." method="_toggle_single_player_menu"]
[connection signal="pressed" from="MenuFrame/MainFrame/MainPanel/OnlineButton" to="." method="_toggle_online_menu"]
[connection signal="pressed" from="MenuFrame/MainFrame/MainPanel/ControlsButton" to="." method="_toggle_controls_menu"]
[connection signal="pressed" from="MenuFrame/MainFrame/MainPanel/OptionsButton" to="." method="_toggle_options_menu"]
[connection signal="pressed" from="MenuFrame/MainFrame/QuitPanel/QuitButton" to="." method="_on_QuitButton_pressed"]
